--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^5.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.6",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
